Add card collection info section with progress counter and update title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,36 @@
         <!-- Main Content -->
         <div class="main-content">
             <h1 class="title">Subi's Gacha Gift</h1>
-            <p class="subtitle">Click to pull some magical birthday surprises!</p>
+            <p class="subtitle">Click to pull a magical birthday surprise! 🎁</p>
+            
+            <!-- Card Information Section -->
+            <div class="card-info">
+                <h3 class="info-title">📊 Card Collection</h3>
+                <div class="info-stats">
+                    <div class="stat-item">
+                        <span class="stat-number">0</span>
+                        <span class="stat-label">Cards Found /10</span>
+                    </div>
+                </div>
+                <div class="tier-info">
+                    <div class="tier-item legendary">
+                        <span class="tier-name">Legendary</span>
+                        <span class="tier-chance">10%</span>
+                    </div>
+                    <div class="tier-item epic">
+                        <span class="tier-name">Epic</span>
+                        <span class="tier-chance">20%</span>
+                    </div>
+                    <div class="tier-item rare">
+                        <span class="tier-name">Rare</span>
+                        <span class="tier-chance">25%</span>
+                    </div>
+                    <div class="tier-item magic">
+                        <span class="tier-name">Magic</span>
+                        <span class="tier-chance">35%</span>
+                    </div>
+                </div>
+            </div>
             
             <!-- Treasure Chest -->
             <div class="gacha-machine" id="gachaMachine">
